chore: Reference javafx jars as modules in installer